<resources>
    <string name="app_name">倪玮然的录音APP</string>
    <string name="title_main">主页面</string>

    <string name="account_up">登录</string>
    <string name="account_new">注册</string>
    <string name="btn_yes">确认</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="pwd_error">密码不一致</string>
    <string name="new_success">注册成功</string>
    <string name="user_repeat">用户已存在</string>
    <string name="up_success">登录成功</string>
    <string name="user_error">账号或密码错误</string>
    <string name="username_null">账号不能为空</string>
    <string name="username">请输入账号</string>
    <string name="userpwd">请输入密码</string>
    <string name="reuserpwd">请确认密码</string>

    <string name="action_main">录音列表</string>
    <string name="recording">录音中...</string>
    <string name="title_record">标题</string>
    <string name="setting_record">设置</string>
    <string name="record_title">请输入标题</string>
    <string name="reUserSetting">未修改账号设置</string>
    <string name="reUpUser">修改成功，请重新登录</string>

    <string name="delete">删除</string>
    <string name="redelete">确认删除这条数据？</string>
    <string name="yes">删除</string>
    <string name="no">取消</string>
    <string name="log_out">注销账号</string>
    <string name="relog_out">注销后账号将无法找回！</string>
    <string name="log_out_success">注销成功</string>
    <string name="btn_return">返回</string>
    <string name="record_delete">录音删除成功</string>

    <string name="record_power_no">授权失败</string>

</resources>