<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/iv_user"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="225dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/et_userpwd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/userpwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintBottom_toTopOf="@id/et_reuserpwd"
        />
    <EditText
        android:id="@+id/et_reuserpwd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/reuserpwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_userpwd"
        app:layout_constraintBottom_toTopOf="@id/btn_account_new"
        />

    <Button
        android:id="@+id/btn_account_new"
        style="@style/Button"
        android:text="@string/account_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>