<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:src="@drawable/iv_main"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp" />

    <TextView
        android:id="@+id/tv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/theme_app"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/iv_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_account_up"
        style="@style/Button"
        android:text="@string/account_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_account_new"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_account_new"
        style="@style/Button"
        android:text="@string/account_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>